# oc_projet7

./: .gitignore  README.md  compose.yaml  docker-compose.yaml  install_mongo_db.sh  main.py  mongodb_cluster_init.sh  mongodb_init.sh  params.ini  params.ini.model  polars.py  pyproject.toml
js/: 1_premier_dossier.js  2_Nombre_de_documents.js  3_logements_libres.js  4_annonce_par_type.js  5_evaluations.js  6_hotes_differents.js  7_locations_instantanees.js  8_hotes_100_annonces.js  9_supers_hotes.js  rapport_questions.sh
lib/: gcp_storage_functions.py  logging_project.py  mongodb_functions.py  polar_functions.py
